--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,12 @@
 {
-  "routes": [
+  "rewrites": [
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
     },
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/((?!api/|assets/|_next/|favicon.ico|logo.svg).*)",
+      "destination": "/index.html"
     }
   ]
 }
