--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
       "source": "/((?!api/|assets/|_next/|favicon.ico|logo.svg|logo.png|POP.Proof_Of_Putt.Log.576.png).*)",
