Implement proper OAuth signup and login flow separation
- Add mode parameter to OAuth sessions to differentiate signup vs login intent
- Create account setup flow for OAuth users without existing accounts
- Create account linking flow for OAuth users with existing accounts
- Add Sign up with Google button to registration page
- Implement smart routing based on account existence and user intent
- Add new API endpoints for OAuth account linking and signup completion
- Create LinkAccountPage and SetupAccountPage components
- Update OAuth callback to handle four distinct flow scenarios
- Add database migration for oauth_sessions mode column

--- a/.env.example
+++ b/.env.example
@@ -20,9 +20,17 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret-here
 LINKEDIN_CLIENT_ID=your-linkedin-client-id-here
 LINKEDIN_CLIENT_SECRET=your-linkedin-client-secret-here
 
+# Frontend URL - REQUIRED for OAuth redirects
+# This must match your actual frontend URL (including protocol)
+# Production: https://app.proofofputt.com
+# Local development: http://localhost:5173 (or your dev server port)
+FRONTEND_URL=https://app.proofofputt.com
+
 # OAuth Callback URLs (for reference)
+# These must be registered in your OAuth provider settings:
 # Google: https://your-domain.com/api/auth/google/callback
 # LinkedIn: https://your-domain.com/api/auth/linkedin/callback
+# Nostr: No callback needed (direct authentication)
 
 # Add other environment variables as needed
 NODE_ENV=development
